# topokit

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  README.md  mkdocs.yml  nx.json  package-lock.json  package.json  pyproject.toml
.github/workflows/: nightly.yml  pr.yml  publish-placeholder.yml  publish.yml
benchmarks/: README.md  project.json  pyproject.toml
benchmarks/bench/: baseline.json
benchmarks/scripts/: bench.py  regenerate.py
benchmarks/src/topokit_bench/: __init__.py  problems.py
benchmarks/tests/: test_benchmarks.py  test_benchmarks_3d.py  test_problems.py  test_quickstart.py  test_robustness.py
benchmarks/tests/data/: cantilever_150x50_mma.npz  cantilever_150x50_oc.npz  cantilever_3d_24x12x12_oc.npz  cantilever_60x20_mma.npz  cantilever_60x20_oc.npz  mbb_150x50_mma.npz  mbb_150x50_oc.npz  mbb_60x20_mma.npz  mbb_60x20_oc.npz  michell_90x30_mma.npz  michell_90x30_oc.npz
docs/: project.json
docs/content/: contributing.md  index.md
docs/content/reference/: api.md
packaging/placeholder/: README.md  pyproject.toml
packaging/placeholder/src/topokit/: __init__.py
topokit/: README.md  project.json  pyproject.toml
topokit/src/topokit/: __init__.py  backend.py  checkpoint.py  events.py  fem.py  fields.py  jax.py  mesh.py  optimizers.py  parametrization.py  problem.py  registry.py  responses.py  selection.py  solvers.py  testing.py
topokit/src/topokit/backend/: __init__.py  conformance.py  numpy.py
topokit/src/topokit/optimizers/: __init__.py  _base.py  _mma.py  _oc.py
topokit/src/topokit/viz/: __init__.py  _backend.py  _convergence.py  _density.py  _live.py
topokit/tests/: __init__.py  conftest.py  test_backend.py  test_boundaries.py  test_checkpoint.py  test_events.py  test_fd_harness.py  test_fem.py  test_fields.py  test_jax.py  test_mesh.py  test_mma.py  test_optimizers.py  test_parametrization.py  test_problem.py  test_public_api.py  test_registry.py  test_responses.py  test_schedule.py  test_selection.py  test_solvers.py  test_viz.py
