[project]
name = "topokit-bench"
version = "0.0.1.dev0"
description = "TopoKit reference benchmark suite"
requires-python = ">=3.12"
dependencies = ["topokit", "numpy>=2.2"]

[tool.uv.sources]
topokit = { workspace = true }

[dependency-groups]
dev = ["pytest>=8.3", "mypy>=1.14", "ruff>=0.9"]

[build-system]
requires = ["uv_build>=0.8.9,<0.9.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF", "D"]
ignore = ["D105", "D203", "D213"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["D"]
"scripts/**" = ["D"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.mypy]
strict = true
files = ["src", "tests", "scripts"]
cache_dir = "../.mypy_cache"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["regression: Tier-3 2D reference regression tests"]
