[project]
name = "topokit"
version = "0.0.1.dev0"
description = "Open-source topology optimization for engineers"
readme = "README.md"
requires-python = ">=3.12"
license = "LGPL-2.1-or-later"
authors = [{ name = "Peter Udvardi", email = "udvardi.peter98@gmail.com" }]
dependencies = ["numpy>=2.2"]

[dependency-groups]
dev = [
  "pytest>=8.3",
  "pytest-cov>=6.0",
  "mypy>=1.14",
  "ruff>=0.9",
  "import-linter>=2.1",
]

[build-system]
requires = ["uv_build>=0.8.9,<0.9.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF", "D"]
ignore = ["D203", "D213"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["D"]

[tool.mypy]
strict = true
files = ["src", "tests"]
warn_unreachable = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
markers = [
  "fd: Tier-2 finite-difference sensitivity verification tests",
]

[tool.importlinter]
root_package = "topokit"

[[tool.importlinter.contracts]]
name = "L0 foundation modules are mutually independent"
type = "independence"
modules = ["topokit.registry", "topokit.events", "topokit.fields", "topokit.testing"]
