[project]
name = "topokit"
version = "0.0.1.dev0"
description = "Open-source topology optimization for engineers"
readme = "README.md"
requires-python = ">=3.12"
license = "LGPL-2.1-or-later"
license-files = ["LICENSE"]
authors = [{ name = "Peter Udvardi", email = "udvardi.peter98@gmail.com" }]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Manufacturing",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "numpy>=2.2",
    "scipy>=1.15",
]

[project.urls]
Repository = "https://github.com/UdvardiPeter/topokit"

[project.optional-dependencies]
fast = ["pyamg>=5"]
viz = ["pyvista>=0.44", "matplotlib>=3.8"]
jax = ["jax>=0.10"]
all = ["topokit[fast,viz,jax]"]

[project.entry-points."topokit.backends"]
jax = "topokit.jax:BACKEND"

[dependency-groups]
dev = [
  "pytest>=8.3",
  "pytest-cov>=6.0",
  # <2: mypy 2.x (mypyc-compiled) crashes on CI Linux; revisit when stable
  "mypy>=1.14,<2",
  "ruff>=0.9",
  "import-linter>=2.1",
  "scipy-stubs>=1.17",
  "pyamg>=5",
  "pyvista>=0.44",
  "matplotlib>=3.8",
  "jax>=0.10",
]

[build-system]
requires = ["uv_build>=0.8.9,<0.9.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF", "D"]
ignore = ["D105", "D203", "D213"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["D"]
"src/topokit/backend/conformance.py" = ["D102"]

[tool.mypy]
strict = true
files = ["src", "tests"]
warn_unreachable = true
cache_dir = "../.mypy_cache"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
markers = [
  "fd: Tier-2 finite-difference sensitivity verification tests",
]

[tool.importlinter]
root_package = "topokit"

[[tool.importlinter.contracts]]
name = "L0 layering: selection consumes mesh; the rest are independent"
type = "layers"
layers = [
  "topokit.viz",
  "topokit.problem",
  "topokit.responses",
  "topokit.fem : topokit.solvers : topokit.parametrization : topokit.optimizers",
  "topokit.selection : topokit.jax",
  "topokit.mesh",
  "topokit.backend : topokit.events : topokit.fields : topokit.testing : topokit.checkpoint",
  "topokit.registry",
]
ignore_imports = ["topokit.problem -> topokit.viz"]
